[workspace]
members = ["test-util"]

[package]
name = "solitaire"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_seeder = "0.2.3"
thiserror = "1.0.51"
arr_macro = "0.2.1"
strum = "0.25.0"
strum_macros = "0.25.0"

clap = {version = "4.4.11", features = ["derive"], optional = true }
crossterm = { version = "0.27.0", optional = true }
ratatui = { version = "0.25.0", optional = true }

[dev-dependencies]
test_util = {path = "test-util"}
criterion = "0.5.1"

[lib]
name = "solitaire"

[features]
tui = ["crossterm", "ratatui", "clap"]

[[bin]]
name = "solitaire-tui"
required-features = ["tui"]

[[bench]]
name = "klondike"
harness = false

