[workspace]
members = ["test-util"]

[package]
name = "solitaire"
version = "1.0.1"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_seeder = "0.2.3"
thiserror = "1.0.51"
arr_macro = "0.2.1"
strum = "0.25.0"
strum_macros = "0.25.0"
web-time = "1.1.0" # wasm32-unknown-unknown doesn't support std::time::Instant::now()

clap = { version = "4.4.11", features = ["derive"], optional = true }
crossterm = { version = "0.29.0", optional = true }
# default features are disabled as it includes crossterm, which interferes with the web version
ratatui = { version = "0.29.0", optional = true, default-features = false }
ratzilla = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.82", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
test_util = { path = "test-util" }
criterion = "0.5.1"

[lib]
name = "solitaire"
crate-type = ["rlib", "cdylib"]

[features]
ui = ["ratatui"]
tui = ["ui", "crossterm", "clap", "ratatui/crossterm"]
web = ["ui", "ratzilla", "web-sys"]

[[bin]]
name = "solitaire-tui"
required-features = ["tui"]

[[bin]]
name = "solitaire-web"
required-features = ["web"]

[[bench]]
name = "klondike"
harness = false

